--- a/wikifood/.settings/org.eclipse.wst.common.component
+++ b/wikifood/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="wikifood">
+    <wb-module deploy-name="wikifood-manager">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -10,7 +10,7 @@
         <dependent-module archiveName="wikifood-dao-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/wikifood-dao/wikifood-dao">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="wikifood"/>
-        <property name="java-output-path" value="/wikifood/target/classes"/>
+        <property name="java-output-path" value="/wikifood-manager/target/classes"/>
+        <property name="context-root" value="wikifood-manager"/>
     </wb-module>
 </project-modules>
